--- a/fitoControl.UI/src/view/MarcaView.form
+++ b/fitoControl.UI/src/view/MarcaView.form
@@ -64,11 +64,7 @@
                                           <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="jTextID" min="-2" pref="179" max="-2" attributes="0"/>
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="jTextNombre" min="-2" pref="179" max="-2" attributes="0"/>
-                                                  <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-                                                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                                              </Group>
+                                              <Component id="jTextNombre" alignment="0" min="-2" pref="179" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Component id="jLabelIDMarcas" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -98,7 +94,6 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabelNombre" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTextNombre" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                   <Component id="jScrollPane2" min="-2" pref="196" max="-2" attributes="0"/>
@@ -199,11 +194,6 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="jButton1">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Buscar"/>
-          </Properties>
-        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
